--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -25,7 +25,9 @@
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/23/n12900976.md#1" target="_blank">【未解之谜】中国古人的濒死体验故事</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/23/n12900976.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12900988-YellowSpring-1200x800-150x120.jpg" align ="left"></a>春秋晚期晋国大夫赵简子在临死状态下，不仅遨游天国，还见到了先帝，能够与他沟通。通过先帝所述，赵简子未卜先知，知道了日后晋国会灭亡，以及秦国的兴衰。最神奇的是名医扁鹊，他能看出赵简子灵魂离体，甚至知道灵魂在什么时候会回到赵简子身上。现在西方的医学，至少在临死体验这个专门的领域，落后中国古代的医术，落后了将近2000年。在.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 7:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/23/n12900792.md#1" target="_blank">不丹小王子前世曾为中国僧人</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/23/n12900792.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905785-Jacaranda_bhutan-150x120.jpg" align ="left"></a>浩瀚无际的宇宙，对于渺小的人类而言是一个巨大的迷，而纷繁复杂的大千世界，人类同样难以参透。比如，生命是否会轮回、天堂和另外空间是否存在等等。古往今来，无数人在求索着，而上天也有意透露天机给某些人，如让他们带着前世的记忆或者可以看到常人所看不到的景象，并藉由他们将天机传递给世人，启悟人的灵性。本文的主人公不丹小王子毗卢遮.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 4:38 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/19/n12890807.md#1" target="_blank">天堂梦（119）</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/19/n12890807.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Heaven--150x120.jpg" align ="left"></a>幸亏她插队农村的大女儿育红和其他知青一起冲垮了共产党的上山下乡政策， 回城做了工人，认了这位给她和原来家庭带来灾难的母亲......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 3:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/20/n12893207.md#1" target="_blank">张三丰恩济之人 心存慈念的老翁和书生</a><br></h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/20/n12893207.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/10/1610051313101456-150x120.jpg" align ="left"></a>明朝大道张三丰，在世间大显神迹。很多王公贵族都想一览真人仙风，争相发出邀请。但若是无缘，即使与真人对面而行，世人也难识真仙真容。对于有缘人，那满腔的仁慈善念，谨慎诚敬的心地，也会意外地得到高人的恩济。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 11:06 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914296.md#1" target="_blank">菩萨蛮．春暮</a><br></h3>山间渲染红黄绿，河边清白枝头玉。
+照水柳新裁，迎风梨盛开。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/29/n12914182.md#1" target="_blank">诗歌：阳春三月</a><br></h3>阳春浴暖今三月， 转换风光便不同。 鲜叶紫红生晚李， 小花黄绿满春枫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:05 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911635.md#1" target="_blank">七律：孕育生机</a><br></h3> 三月春深风雨霁， 无边鲜嫩映新晴。 金澄光满黄榆树， 红艳花开紫李樱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 12:38 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911636.md#1" target="_blank">蝶恋花．暮春雨</a><br></h3> 一夜浓阴云密布，雨横声嘶，料峭狂风舞。 寒榻卧听三月雨，愁心虑患芳春暮。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 12:36 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/28/n12911634.md#1" target="_blank">歌词：我在春天里等你（二叠）</a><br></h3>当时春风在，
@@ -39,6 +41,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/19/n12890824.md#1" target="_blank">浣溪沙．春满深山</a><br></h3> 花到深山映碧霄，香随山势与风高。 心怡璀璨入迢遥。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/26/n12906704.md#1" target="_blank">歌词：我与明天有个约定</a><br></h3>别了粉饰的名， 带着远古的梦， 我与明天有个约定。 苦炼神功， 心空入静， 连根拔掉虚荣。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/25/n12904366.md#1" target="_blank">一七令．家乡河北</a><br></h3>庄。 河北，名庄。 张家口，石家庄。 清凉世界，避暑山庄。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月27日 12:07 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/21/4/25/n12904356.md#1" target="_blank">诗歌：大法徒（外一首）</a><br></h3>大法徒  浊世清流慈悲心 腥风血雨法徒魂 铮铮傲骨金刚志 道德丰碑见精神......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 2:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ibqqdx3304/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_2.htm">https://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://github.com/ibqqdx3304/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
