--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928278.md#1" target="_blank">【疫情5.6】印度新病例及死亡数再破纪录</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928278.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928289-GettyImages-1232707619-320x200.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周四（5月6日）清晨5:20，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.55亿（155,225,.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 6:51 PM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928354.md#1" target="_blank">“别学我 很危险”菲总统退回中共国药疫苗</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928354.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/10/p9066151a303492750-150x120.jpg" align ="left"></a>菲律宾总统杜特尔特（Rodrigo Duterte）受到广泛批评后，要求中共大使馆收回1000只捐赠的国药（Sinopharm）疫苗，并说自己已经打了该疫苗，呼吁其他人千万别跟自己学，因为“很危险 ”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 5:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928052.md#1" target="_blank">美议员提“桥梁法案” 对抗中共一带一路</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928052.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928064-GettyImages-1203830481-150x120.jpg" align ="left"></a>美国共和党众议员斯科特·菲茨杰拉德（Scott Fitzgerald）周二（5月4日）提出立法，以对抗中共的“一带一路”倡议。他指出，中共一带一路对美国的经济与国家安全，具有直接且长期的风险。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 4:16 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12922278.md#1" target="_blank">温哥华贺法轮大法洪传29周年 民众纷纷学功</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12922278.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922302-01-ADSC02295-150x120.jpg" align ="left"></a>5月2日，加拿大的温哥华市春光明媚，鸟语花香。当地部分法轮功学员来到位于市中心的温哥华艺术馆（Vancouver Art Gallery）广场前，共同庆祝法轮大法洪传世界29周年。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 4:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926515.md#1" target="_blank">【内幕】文件曝政法督导组进驻河北细节</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926515.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927476-1407152337322320-600x400-150x120.jpg" align ="left"></a>近日大纪元获得的内部文件，曝光了当局政法教育整顿运动中，中央第二督导组进驻河北之前，河北内部对督导组成员的优厚待遇做出规定。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 12:48 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925015.md#1" target="_blank">美弗州第11县决议 强烈谴责中共迫害法轮功</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925015.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926893-P1200739-150x120.jpg" align ="left"></a>5月4日，美国弗吉尼亚州库尔佩珀县（Culpeper County）委员会全票通过一项决议案，“最强烈地谴责中共迫害法轮功”，并强烈谴责中共强摘良心犯器官的行径。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 9:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927025.md#1" target="_blank">五大驱动力重塑中欧关系 欧盟对中共更强硬</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927025.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/000_1TW38C-150x120.jpg" align ="left"></a>中欧关系日益引发外界关注。欧盟周二（5月4日）发出信号，只要中共官员因人权侵犯问题受到制裁，欧盟就不会批准与中国的投资协议。欧盟也制定了战略，对抗中共国家资助的收购战略。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 7:42 AM							</td></tr>
@@ -33,6 +34,5 @@
 从4月20日至29日，香港《大公报》连续发表8篇有关诬蔑法轮功的所谓独家报导和.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 10:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923481.md#1" target="_blank">【疫情5.4】印美旅行限制今日生效</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923481.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906498-GettyImages-1314180158-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周二（5月4日）早上4:20，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.53亿（153,559,931）例，死亡人数超过321万（3,213,878）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 8:05 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923366.md#1" target="_blank">墨西哥地铁天桥崩塌 列车坠地 23死70伤</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923366.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12923372-GettyImages-1316187310-150x120.jpg" align ="left"></a>周一（5月3日）晚上，墨西哥发生严重的列车伤亡意外。据路透社报导，墨西哥城一座高架轨道桥梁倒塌在繁忙的道路上。目前，该事故至少造成20人死亡，70人受伤，其中49人必须住院治疗。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 4:13 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922572.md#1" target="_blank">中央公园法轮功炼功点 纽约人相继而来</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922572.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922581-IMG_5004-150x120.jpeg" align ="left"></a>每年的5月是纽约中央公园最美的季节，即使玉兰花和樱花谢得快，还有郁郁葱葱的树林围在倒映着曼哈顿的摩天大楼的湖水旁，构成一幅室外桃源画。不过，在去年5月的一天，当纽约一家著名的经济组织的会计师塔田娜（Tatiana Pishchulina）走进中央公园北门的时候，吸引她的却不是眼前的湖光山色，而是左手小路旁的别样景象。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 2:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
