--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -9,7 +9,7 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926604.md#1" target="_blank">大多伦多4月住房销量同比增362%  房市走缓</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926604.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926627-IMG_0615-150x120.jpg" align ="left"></a>多伦多地产局（TRREB）5月5日（周三）最新报导表示，4月大多伦多地区（GTA）住房销量比去年同期增长了362%，但比今年3月下降了12.7%。房市热度降低。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 5:32 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926121.md#1" target="_blank">没搅拌器也能烤蛋糕 6点心食谱庆祝母亲节</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926121.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927889-shutterstock_1709679376-150x120.jpg" align ="left"></a>很多家庭的厨房里没有电动搅拌机，因此就觉得不可能烘烤任何甜点。或者有些人不想把厨房弄得太脏，不好清理，所以只想尝试简单易做的糕点，那么可以参考以下6种蛋糕和饼干食谱，只需要用1至2个大碗、木汤匙和奶油切刀，就能做出像草莓柑橘玉米蛋糕这样芳香浓郁的美味甜点。这些食谱也适合让孩子帮着一起做，他们会觉得特别有趣。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 5:20 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927385.md#1" target="_blank">登百岳不是为了征服它 山中岁月教给我的事</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927385.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927559-189-1-150x120.jpg" align ="left"></a>“当按下快门的一刹那，你是否也抓住了永恒？”台湾百岳完登者Joe Joe Huang原是年薪百万的科技人，但是热爱山林选择全职投入山岳领队，他将自己与山林对话的日子，以摄影和书写的方式记载下来。如果你也想饱览山林景色，却仍无法登高望远，那么就和我们一起浏览行家的健行日记吧！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 3:10 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank">番茄防癌、增免疫力 加一步骤煮熟吃最营养</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927539-shutterstock_143668231-150x120.jpg" align ="left"></a>番茄又称西红柿，可分为大番茄、小番茄。食品科学博士、营养师陈小薇指出，大番茄属于蔬菜，甜度底，热量低，100公克只有17大卡。每100公克的膳食纤维比小番茄略少一些。小番茄属于水果，甜度高，热量也高，同样100公克，红色小番茄为30大卡，橙色小番茄是29大卡。茄红素抗氧化力是β-胡萝卜素的2倍，对人体4大好处。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 2:30 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank">番茄防癌、减肥又增免疫力 这样熟吃最营养</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927539-shutterstock_143668231-150x120.jpg" align ="left"></a>番茄又称西红柿，可分为大番茄、小番茄。食品科学博士、营养师陈小薇指出，大番茄属于蔬菜，甜度底，热量低，100公克只有17大卡。每100公克的膳食纤维比小番茄略少一些。小番茄属于水果，甜度高，热量也高，同样100公克，红色小番茄为30大卡，橙色小番茄是29大卡。茄红素抗氧化力是β-胡萝卜素的2倍，对人体4大好处。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 2:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925790.md#1" target="_blank">蔬食料理升级版“南洋鹰嘴豆塔”颠覆你的想像</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925790.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925794-P.22-150x120.jpg" align ="left"></a>不需要大厨的精湛手艺，也能端出餐厅级的菜色。不需要稀罕的食材和高难度的技法，也能料理出食物的真实美味和香气。专为家人而煮的美食飨宴，也可以有浓浓的异国风，却带点家常手感温度。让文青主厨Jerry不藏私的带我们一起动手做一道特别料理，而且又平易近人的菜肴--“南洋鹰嘴豆塔”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 1:38 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927516.md#1" target="_blank">闹钟怎么也叫不醒 是什么原因？2招成功起床</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927516.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927598-shutterstock_655912831-150x120.jpg" align ="left"></a>闹钟加上贪睡闹钟的双重攻势也叫不醒，可别因为自己意志薄弱放弃！怎样成功听到闹钟，并且爬起床呢？我们的脑中会分泌褪黑激素这种睡眠荷尔蒙、加深睡眠，而加深睡眠的时机又与闹钟响的时间重叠。这种情况多数发生在睡眠时间很短就要起床的时候。想要让自己听到闹钟后顺利起床，就要通过触及思维、运动，来唤醒你的大脑。睡眠不足的人......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 11:05 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923136.md#1" target="_blank">抗病害 这些天然配方让花茁壮美丽 水果更甜</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923136.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925483-shutterstock_1815095834-150x120.jpg" align ="left"></a>可以使用醋来制作一种天然的植物喷雾剂，以对抗大多数的植物病害，也就是植物锈蚀和螨虫侵扰。将两汤匙醋添加到一公升水中，然后将它倒入喷雾瓶。这样就完成了一种广效性又温和无害的喷雾剂。有了它，就足以对付大多数的病原体和植物害虫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月06日 9:15 AM			</td></tr>
