--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -37,7 +37,6 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902192.md#1" target="_blank">谢卫国：忆四?二五中南海和平上访</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902192.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902219-2004-4-23-425_p-150x120.jpeg" align ="left"></a>日月星河循环往复，冬去春来又一载，清华迎来了110周年校庆，这一天，就会让人回忆起一九九九年校庆日四月二十五日，当天上万名法轮功学员去中南海和平上访，时任总理朱镕基学长看到法轮功学员的正行，他本人经历过中共反右迫害，感受到法轮功学员的诚意和合理请求，出面做出正确处理，使得“四?二五”和平落幕，赢得海外媒体一片赞誉之声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 8:51 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902318.md#1" target="_blank">陈思敏：四二五有感“中国本来可以是另一个样子”</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902318.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902348-7ED5051-150x120.jpeg" align ="left"></a>4月25日，是法轮功学员在北京中南海和平上访22周年的日子。回顾1999年这一天，若用一句话来代表各界的震撼，会是现场一位执勤警察指着被法轮功学员清理得干干净净的地面对另外一个警察说：“什么是德，这就是德！”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 5:56 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902297.md#1" target="_blank">戈壁东：中共超限战攻城略地 美国全面应战还来得及吗？</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902297.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2015/10/1510190457201664-150x120.jpg" align ="left"></a>国会刚刚高票通过了《2021战略竞争法案》，这是美国在最近几十年里第一次以法案形式确立的与中共决战的一个重大的历史性的国家决策。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 5:20 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12905585.md#1" target="_blank">灵根自植?长戚戚</a><br></h3>“平生不作亏心事，夜半敲门也不惊”，自家摆酒设宴，主人家不在场献辞祝酒，怕的是什么？多年来鬼话连篇的大外宣和无法无天，一朝自己戮破揭穿，这台戏怎样唱下去？“君子坦荡荡，小人长戚戚”，赤魔岂无忧惧？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 6:43 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/26/n12905934.md#1" target="_blank">千百度：网友吐槽五一调休“折腾劳动者”</a><br></h3>眼看着一年一度的五一假期就要到了。
 
 以往五一大陆都是放三天天假，但今年却是五天。怎么回事？原来，根据中共《国务院办公厅关于2021年部分节假日安排的通知》，今年五一从5月1日（星期六）至5月5日（星期三）放假调休，之后4月25日（星期日）、5月8日（星期六）上班。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 5:43 PM			</td></tr>
@@ -50,5 +49,14 @@
 听闻毛骨悚然，不能不细思忖。
 特供铁定潜规，怎么未成贡品？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:56 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/25/n12903482.md#1" target="_blank">【网海拾贝】中共和西方，谁末日来临？</a><br></h3>习近平在博鳌论坛上的一番讲话大有警告西方的意味。一向被公认为霸权、强权和威权的中共，如今遭到整个西方阵营的联手反击，但为何习近平还表现得如此强势？是有王牌在手还是末日狂奔？香港实业家袁弓夷透露从北京方面得到的消息，指“当局感觉良好，感觉非常之良好”，外界觉得中共末日来临，中共反而觉得西方的末日来临。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 1:58 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/24/n12902280.md#1" target="_blank">吐为快：贺骄郎?赵家战狼与狗儿</a><br></h3>西降东升梦。
+踏春风，
+赵营秣马，
+海峡机轰。
+赵家战狼名“西雄”，
+民主金牌铭胸，
+赢得主人万千宠。
+盛宴外事喜相从，
+更誉为中国特色种。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月24日 4:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/news392_5.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_5.htm">https://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
