--- a/gb/news2007_2.md
+++ b/gb/news2007_2.md
@@ -17,7 +17,8 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank">学会做计划 让学习变得更简单</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/30/n12915060.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/09/WAStudentsGradesAreLow-150x120.jpg" align ="left"></a>计划能力可以让学习变得更容易。无论是小学、中学还是大学生，都可以培养和发展自己的计划能力。俗话说：“失于计划就是在计划失败。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 9:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank">他们带着记忆转生 与前世亲人再续前缘</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12911767.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/08/shutterstock_1292585332-150x120.jpg" align ="left"></a>大千世界无奇不有。你能想像，突然有一天，有一个人来拜访自己，并说自己是其前世的亲人，甚至还记得前世的点点滴滴？事实上，这样的案例近些年来海外媒体报出了不少，尤其在信佛的印度、泰国等国，不过古代中国和近代典籍上早有这类记载。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 2:39 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/3/31/n12849718.md#1" target="_blank">【梅辛传】之七：预言希特勒亡 第三帝国崩毁</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/3/31/n12849718.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/03/messing4-150x120.png" align ="left"></a>二战前夕，梅辛和汉森均在德国享有很高的声誉。然而，二人因秉持不同的理念，命运也为他们划出了不同的人生轨迹。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 8:05 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12910639.md#1" target="_blank">轮回转生来还债 一分不多给 一分不少还</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12910639.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12910768-cow-150x120.jpg" align ="left"></a>谁说人死灯灭，一了百了呢！两个真实故事见证生命轮回转生还债：“善恶有报”，老天的账上留，一分不差！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 7:23 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12919607.md#1" target="_blank">古体三首</a><br></h3>来来时去去，去去时来来。 来了还又去，去了还又来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:12 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12919649.md#1" target="_blank">诗歌：夏临</a><br></h3> 青桃黄杏渐长成， 槐花若云摇香风。 睡莲池塘露笑脸， 夜合枝头飞红绒。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月03日 1:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/1/n12918234.md#1" target="_blank">一七令．四季和声</a><br></h3>声。 飞雪，风声。 松林吼，似涛声。 冰消雪化，燕语莺声。 夏来迎酷暑，风雨伴雷声。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 12:17 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/30/n12916562.md#1" target="_blank">一七令．欢迎您到满城来</a><br></h3> 珍。 保定，西门。 曹仙洞，靖王坟。 山下村寨，曰守陵村。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 11:10 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/30/n12916589.md#1" target="_blank">新诗：灯下夜雨</a><br></h3>久旱灯黄夜思雨  一枕黄昏谁与床  夜 你终于耐不住寂寞 携雨来见这盏街灯 已经记不起多少日子 淅沥夜语 晕黄灯光......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月01日 10:55 PM			</td></tr>
@@ -30,6 +31,5 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12914296.md#1" target="_blank">菩萨蛮．春暮</a><br></h3>山间渲染红黄绿，河边清白枝头玉。
 照水柳新裁，迎风梨盛开。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/29/n12914182.md#1" target="_blank">诗歌：阳春三月</a><br></h3>阳春浴暖今三月， 转换风光便不同。 鲜叶紫红生晚李， 小花黄绿满春枫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月30日 12:05 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12911635.md#1" target="_blank">七律：孕育生机</a><br></h3> 三月春深风雨霁， 无边鲜嫩映新晴。 金澄光满黄榆树， 红艳花开紫李樱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月29日 12:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/news2007_2.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/news2007_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/news2007_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_2.htm">https://www.epochtimes.com/gb/news2007_2.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
