--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -29,7 +29,7 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918946.md#1" target="_blank">千百度：大陆人口“继续保持增长”，你信吗？</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918946.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918969-1405050144191459--150x120.jpeg" align ="left"></a>正当海内外舆论对中共迟迟不公布2020年人口普查数据议论纷纷之际，4月29日，中共国家统计局发布了一条只有35字的短消息，称：“据了解，我国人口继续保持增长，具体数据将在第七次全国人口普查公报中公布。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 2:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918926.md#1" target="_blank">清竹：中共的疫苗陷阱已挖好 看谁往里跳？</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918926.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918940-GettyImages-1207184248--150x120.jpeg" align ="left"></a>近来中共把打疫苗上升到了政治任务。为了完成任务，为了向上头表衷心，在全国各地出现了千姿百态促销打疫苗的奇葩现象。有的地方打一针疫苗可领一桶菜油，或领一桶奶粉或一包大米，也有的发星巴克咖啡票或鸡蛋等等。现在又出现打疫苗送钱的怪像。网上报导，在上海有专人直接在大街上喊叫，明码标价，打一针疫苗赠送200元，最多还有赠送500.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 1:49 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918907.md#1" target="_blank">项云：马斯克面对的中共陷阱</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918907.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12918918-GettyImages-1297970484--150x120.jpeg" align ="left"></a>2014年马斯克的特斯拉工厂欲进军大陆。中共开出条件是合资，并占不低于50%股份，自然要掌握主导权，因此项目僵持搁置。但2017年美国资本回流，制造业撤离，而且有形成世界潮流趋势。中共为化解国内外巨大压力进行了系列操作“优化”营商环境：几番降税；接连开放外资准入负面清单等，加大吸引外资力度。在此诱饵下，特斯拉工厂奇迹般.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 1:24 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12921960.md#1" target="_blank">周晓辉：中共开七大时暗中勾结日军 后感谢侵华</a><br></h3>日前播出的中共百集洗脑微纪录片《百炼成钢：中国共产党的100年》第二十一集《愚公移山》，讲述了1945年4月23日至6月11日中共召开的七大，这是中共在苏联召开六大17年后又一次召开的全国党代表大会，而之所以延迟这么久召开，中共以“战争环境和其他条件不成熟”一带而过，从而掩盖了其在国统区作乱、因被国民党围剿而逃跑，进而.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 2:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918863.md#1" target="_blank">乾元：湘江血战与幼儿园砍杀</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918863.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12910949-guangxi-150x120.jpg" align ="left"></a>这厢里习近平刚刚号召全国人民要拿出“湘江血战”的精神来面对今天的困局，人还没离开广西多久，广西已连续发生两场幼儿园砍杀事件。第一场发生在广西北流，砍死砍伤18名幼儿园师生，第二场发生在广西桂平，又造成两名儿童受伤。难道是歹徒受到了总书记关于“长征精神”的感召，却下手在最弱小而又天真无邪的孩子身上吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月02日 11:43 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12921925.md#1" target="_blank">张菁： 反右中一根绳子吊死一对夫妻</a><br></h3>在北方的一个小村庄，有一对夫妻，丈夫本来是城市的一名教师，“反右”运动中，属于被遣返对像，因此回到了农村，结束了教书生涯。
 
 当“文革”的风暴袭来，他们夫妇二人就都被打入了另册。他的罪名是“五类分子”，他妻子的罪名是：“右派分子的臭婆娘”。
