--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12912224.md#1" target="_blank"> 感染新冠后也出现血栓！是普通人近100倍</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/28/n12912224.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12912461-shutterstock_1907619565-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/22/n12898717.md#1" target="_blank"> 全球第四波疫情创爆发以来最高 专家揭原因</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/22/n12898717.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12898900-covid-19-variant_1690355482-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/16/n12885397.md#1" target="_blank"> 谷雨节气脾胃功能好 1道养生汤祛湿又减肥</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/16/n12885397.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12891274-solar-term-guyu-chinese-medicine-web-tj-health11-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank"> 【直播】新冠病毒爱脂肪？正确减肥防中招</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928491-5.6.21-web-Health-Live-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank"> 【重播】新冠病毒爱脂肪？正确减肥防中招</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928491-5.6.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926143.md#1" target="_blank"> 【重播】印度真实感染恐达30倍？全球陷大危机</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926143.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926153-5.5.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923822.md#1" target="_blank"> 【重播】逆转脂肪肝！保肝妙招大公开</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12923822.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12923865-5.4.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/27/n12909431.md#1" target="_blank">孩子容易流鼻血 有4大原因！1招快速止血</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/27/n12909431.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12917001-nose-bleed_1559072021-copy-320x200.jpg"></a></td></tr>
@@ -23,6 +23,6 @@
 <h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925811.md#1" target="_blank">为何夫妻分开睡比较健康？英国医生这么说</a><br></h3>
 <h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926143.md#1" target="_blank">【重播】印度真实感染恐达30倍？全球陷大危机</a><br></h3>
 <h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927516.md#1" target="_blank">闹钟怎么也叫不醒 是什么原因？2招成功起床</a><br></h3>
-<h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank">【直播】新冠病毒爱脂肪？正确减肥防中招</a><br></h3>
+<h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928480.md#1" target="_blank">【重播】新冠病毒爱脂肪？正确减肥防中招</a><br></h3>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
