--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -19,6 +19,7 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925967.md#1" target="_blank">3至4月份 2857名法轮功学员被绑架骚扰</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925967.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926324-2021-5-4-mh-persecution-1-1_Fotor-150x120.jpg" align ="left"></a>2021年3月至4月份，至少2,857名法轮功学员遭警察绑架骚扰，其中1,090人遭绑架，1,767人被骚扰，501人被非法抄家，21人被迫离家出走。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 10:45 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926440.md#1" target="_blank">G7集团正考虑美国的对抗中共方案</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926440.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924667-GettyImages-1232689514-150x120.jpg" align ="left"></a>目前七国集团（G7）会议正在伦敦举行，外媒报导，与会国正在考虑美国提出的一项提议，打击中共造成的经济胁迫（economic coercion）。会议还讨论一项成立“香港之友”（Friends Of Hong Kong）组织的提议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 10:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925715.md#1" target="_blank">【疫情5.5】百老汇将于9月全面重新开放</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925715.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2008/01/80108053654789-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周三（5月5日）早上7:40，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.54亿（154,404,850）例，死亡人数超过322万（3,229,357）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 7:37 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924345.md#1" target="_blank">【未解之谜】五台山之谜：清凉胜地的秘密</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924345.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924363-1200x800-3-150x120.jpg" align ="left"></a>华夏神州，山水仙境，处处都有神佛显化、祥瑞灵应等古老的神迹存在。在中华北方的腹地，有一处瑰奇壮丽的山峦美景。它有着罕见的外形：五座主峰，耸立云端；峰顶夷平，犹如垒台。它更是佛教四大菩萨之一文殊菩萨的道场，与佛家文化结下深厚渊源，既是人间形胜，更是佛国圣地。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 7:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925776.md#1" target="_blank">印度测试5G网络 合作厂商排除华为中兴</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925776.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/470957-150x120.jpg" align ="left"></a>印度电信部将中国的华为（Huawei）和中兴通讯（ZTE）排除在5G网络测试之外，让印度成为最新一个在5G领域中排除中企的国家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 5:20 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924779.md#1" target="_blank">美官员：拜登融合奥巴马和川普对华政策</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924779.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51345108-150x120.jpg" align ="left"></a>白宫的中国事务协调员、国家安全委员会成员库尔特·坎贝尔（Kurt Campbell）周二（5月4日）表示，在对抗北京的独断专行上，拜登总统借鉴了奥巴马政府的合作策略和川普（特朗普）政府的强硬路线，既寻求跟北京的合作，也不回避跟北京的竞争。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 1:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924195.md#1" target="_blank">大法洪传29周年 加国政要褒奖世界法轮大法日</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924195.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924954-02-greetingletter5-13-2021-150x120.jpg" align ="left"></a>2021年5月13日是第22届“世界法轮大法日”，也是法轮功创始人李洪志大师的生日。每年，加拿大政要都会褒奖法轮大法，并宣布“法轮大法日/月”，以庆祝这普天同庆的喜庆日子。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 12:21 PM							</td></tr>
@@ -28,11 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924441.md#1" target="_blank">贸易执委：欧盟暂停敲定中欧投资协议</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924441.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/08bfc795bd2e80371cff5baa06dba0e4-150x120.jpg" align ="left"></a>欧盟最高贸易官员周二（5月4日）表示，鉴于中、欧双方在针锋相对的制裁后的外交关系恶化，欧盟已暂停与中国敲定中欧投资协议的努力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月05日 1:52 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924452.md#1" target="_blank">美国德州参议院决议案 谴责中共强摘器官</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924452.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12924493-AAAA-2-1-450x300-150x120.jpg" align ="left"></a>美国德州参议院2021年4月通过一项决议案，强烈谴责中共强摘人体器官尤其是强摘法轮功学员器官的恶行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 11:49 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924095.md#1" target="_blank">向中共出口高端武器图纸 美承包商被罚</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924095.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/37166335531_85d46737c0_k-2-150x120.jpg" align ="left"></a>美国政府和国防承包商霍尼韦尔（Honeywell）因为对中共等国出售未经授权的技术图纸，遭到美国政府1,300万美元的罚款，这些图纸涉及各种飞机、坦克、战斧巡航导弹等高端武器。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 10:03 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12922231.md#1" target="_blank">洛杉矶法轮功学员谴责大公报造谣诬蔑</a><br></h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/3/n12922231.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12922544-DSC01560ab-150x120.jpg" align ="left"></a>针对近日中共在香港的喉舌媒体《大公报》，接连发表诬蔑法轮功的文章一事，洛杉矶地区部分法轮功学员于周一（5月3日）聚集在洛杉矶中领馆前，要求《大公报》撤销诬蔑文章，并公开道歉。同时呼吁仍在替中共做事之人，切勿再出卖良知，应看清天灭中共的形势，为自己选择光明的未来。
-
-
-
-
-从4月20日至29日，香港《大公报》连续发表8篇有关诬蔑法轮功的所谓独家报导和.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月04日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/odhwcb357/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
